--- a/Introdução/Introdução.ipynb
+++ b/Introdução/Introdução.ipynb
@@ -71,7 +71,7 @@
    "id": "a7d041ce",
    "metadata": {},
    "source": [
-    "### 3 - Peça para o usuário digitar três números, imprimir o número \n"
+    "### 3 - Peça ao usuário para digitar três valores inteiros e imprimir a soma deles"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "id": "048f4f5b",
    "metadata": {},
    "source": [
-    "### 11 - Leia uma velocidade em m/s e apresente-a convertida em km/h. A formula de conversão é: K = M * 3,6, sendo K a velocidade em km/h e M em M/s. "
+    "### 11 - Leia uma velocidade em m/s e apresente-a convertida em km/h. A formula de conversão é: K = M * 3,6, sendo K a velocidade em km/h e M em m/s. "
    ]
   },
   {
@@ -837,7 +837,7 @@
    "id": "0524dcee",
    "metadata": {},
    "source": [
-    "### 28 - Leia a altura de três valores e apresente como resultado a soma dos quadrados dos três valores."
+    "### 28 - Faça a leitura de três valores e apresente como resultado a soma dos quadrados dos três valores lidos."
    ]
   },
   {
@@ -911,7 +911,7 @@
    "id": "82ac4e0b",
    "metadata": {},
    "source": [
-    "### 30 - Leia o valor de um produto em dólar. Em seguida, imprima o valor correspondente em reais."
+    "### 30 - Leia um valor em real e a cotação do dólar. Em seguida, imprima o valor correspondente em dólares"
    ]
   },
   {
@@ -1052,7 +1052,7 @@
    "id": "c0ce0eb4",
    "metadata": {},
    "source": [
-    "### 34. Leia o valor do raio de um círculo e calcule e imprima a área do círculo correspondente. A área do círculo é π×raio 2, considere 𝜋 = 3.141592"
+    "### 34. Leia o valor do raio de um círculo e calcule e imprima a área do círculo correspondente. A área do círculo é π×raio ao quadrado 2, considere 𝜋 = 3.141592"
    ]
   },
   {
@@ -1224,7 +1224,21 @@
    "id": "c374f878",
    "metadata": {},
    "source": [
-    "### 39. Uma quantia de RS 78.000,00 será dividida entre três ganhadores de um concurso. Sendo que o primeiro ganhador receberá 46% do total, o segundo receberá 32% do total e o terceiro ficará com o restante. Faça um programa que calcule e imprima o valor que cada um dos ganhadores receberá. "
+    "### 39. A importância de RS 780.000,00 será divídida entre três ganhadores de um concurso. Sendo que da quantia total: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3780ebe",
+   "metadata": {},
+   "source": [
+    "O primeiro ganhador receberá 46%. \n",
+    "\n",
+    "O Segundo receberá 32% \n",
+    "\n",
+    "O terceiro receberá o restante. \n",
+    "\n",
+    "Calcule e imprima a quantia ganha por cada um dos ganhadores"
    ]
   },
   {
@@ -1260,7 +1274,7 @@
    "id": "30c1c02d",
    "metadata": {},
    "source": [
-    "### 40. Faça um programa que calcule o salário líquido de um encanador, sabendo que ele trabalha por dia e recebe RS 30,00 por dia trabalhado. Além disso, o encanador deve pagar 8% de impostos sobre o valor bruto recebido. O programa deve ler o número de dias trabalhados e imprimir o valor líquido a ser pago."
+    "### 40. Uma empresa contrata um encanador a RS 30,00 por dia. Faça um programa que solicite o número de dias trabalhados pelo encanador e imprima a quantia líquida que deverá ser paga, sabendo-se que são descontados 8% para imposto de renda. "
    ]
   },
   {
@@ -1450,7 +1464,7 @@
    "id": "e6afa686",
    "metadata": {},
    "source": [
-    "### 45. Receba uma frase do usuário. Converta todos os caracteres dessa frase para letras minúsculas e exiba o resultado."
+    "### 45. Faça um programa para converter uma letra maiúscula em letra minúscula. Use a tabela ASCII para resolver o problema. "
    ]
   },
   {
@@ -1481,12 +1495,12 @@
    "id": "ce27d9ea",
    "metadata": {},
    "source": [
-    "### 46. Escreva um programa que receba um número inteiro positivo do usuário, inverta a ordem dos seus dígitos e exiba o número invertido na tela."
+    "### 46. Faça um programa que leia um número inteiro positivo de três digitos (de 100 a 999). Gere outro número formado pelos digitos invertidos do número lido. Exemplo: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "e457e2a7",
    "metadata": {},
    "outputs": [
@@ -1494,23 +1508,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Informe um número: 123\n",
-      "O número invertido é: 321\n"
+      "Informe um número entre 100 e 999: 453\n",
+      "O número Invertido é: 354\n"
      ]
     }
    ],
    "source": [
-    "numero = int(input(\"Informe um número: \")) \n",
+    "numero = int(input(\"Informe um número entre 100 e 999: \")) \n",
     "\n",
-    "i = 0\n",
+    "# Separar os digitos \n",
+    "centena = numero // 100 \n",
+    "dezena = (numero // 10) % 10 \n",
+    "unidade = numero % 10\n",
     "\n",
-    "while numero > 0: \n",
-    "    \n",
-    "    i *= 10 \n",
-    "    i += (numero % 10) \n",
-    "    numero //= 10\n",
-    "    \n",
-    "print(f\"O número invertido é: {i}\")"
+    "invertido = unidade * 100 + dezena * 10 + centena \n",
+    "\n",
+    "print(f\"O número Invertido é: {invertido}\")"
    ]
   },
   {
@@ -1518,12 +1531,12 @@
    "id": "7c421d7f",
    "metadata": {},
    "source": [
-    "### 47. Escreva um programa que receba um número inteiro positivo do usuário e exiba todos os números inteiros de 0 até o número informado (excluindo o próprio número), lado a lado. Caso o usuário informe um número negativo ou zero, o programa deve exibir uma mensagem de erro."
+    "### 47. Leia um número inteiro de 4 digitos (de 1000 a 9999) e imprima 1 digito por linha"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "f6bd8fe5",
    "metadata": {},
    "outputs": [
@@ -1531,26 +1544,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Informe um número inteiro positivo: 9\n",
-      "Números de 0 até: 8 : \n",
-      "0 1 2 3 4 5 6 7 8 "
+      "Informe um número entre 1000 e 9999: 40\n",
+      "0\n",
+      "0\n",
+      "4\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "numero = int(input(\"Informe um número inteiro positivo: \")) \n",
+    "numero = int(input(\"Informe um número entre 1000 e 9999: \")) \n",
     "\n",
-    "if(numero > 0): \n",
-    "    \n",
-    "    print(f\"Números de 0 até: {numero - 1}\" \" : \")\n",
-    "    \n",
-    "    for i in range(numero): \n",
-    "        \n",
-    "        print(i, end = \" \")\n",
-    "        \n",
-    "else:\n",
-    "    \n",
-    "    print(\"Por favor, insira um número inteiro positivo. \")"
+    "# Separando os digitos \n",
+    "milhar = numero // 1000 \n",
+    "centena = (numero // 100) % 10 \n",
+    "dezena = (numero // 10) % 10 \n",
+    "unidade = numero % 10 \n",
+    "\n",
+    "## Imprimindo um digito por linha \n",
+    "print(milhar)\n",
+    "print(centena) \n",
+    "print(dezena)\n",
+    "print(unidade)"
    ]
   },
   {
@@ -1558,7 +1573,7 @@
    "id": "3d8f4fc4",
    "metadata": {},
    "source": [
-    "### 48. Escreva um programa que receba um valor em segundos e converta este valor para horas, minutos e segundos, exibindo no formato \"Horas: Minutos: Segundos\"."
+    "### 48. Leia um valor inteiro em segundos, e imprima-o em horas, minutos e segundos."
    ]
   },
   {
@@ -1637,7 +1652,7 @@
    "id": "3b1390cf",
    "metadata": {},
    "source": [
-    "### 50. Escreva um programa que receba a sua idade e o ano atual, e calcule o seu ano de nascimento, exibindo-o na tela. "
+    "### 50. Implemente um programa que calcule o ano de nascimento de uma pessoa a partir de sua idade e do ano atual. "
    ]
   },
   {
